[package]
name = "fhe-aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.11.2", features = ["integer", "noise-asserts", "nightly-avx512"] }
clap = { version = "4.1", features = ["derive"] }
rayon = "1.10.0"
aes = "0.8"
rand = { version = "0.9.0", optional = true }
hex = "0.4.3"

[features]
default = ["parallel_aes"]
# Generate the key and IV values randomly in the binary. Toggles off the Command Line parser.
rand_args = ["dep:rand"]
# Run the FHE AES encryption in parallel for each plaintext.
parallel_aes = []
